[package]
name = "gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4.24"
rusqlite = { version = "0.29.0", features = ["bundled"] }
indicatif = "0.17.3"
rayon = "1.7.0"
sqlx = { version = "0.6", features = [ "runtime-tokio-native-tls" , "postgres" ] }
tokio = { version = "1", features = ["full"] }
backoff = { version = "0.4.0", features = ["futures", "tokio"]}
futures = "0.3.28"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
